src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Commission_Fee__c</fullName>
        <label>Commission Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ER_Contract_status__c</fullName>
        <formula>TEXT(Contract.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Credit_Limit__c</fullName>
        <formula>Opportunity.ER_Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Indexation_Index__c</fullName>
        <formula>TEXT(Opportunity.ER_Indexation_Index__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexation Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Indexation__c</fullName>
        <formula>Opportunity.ER_Indexation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_InvoicingFrequency__c</fullName>
        <formula>TEXT(Opportunity.ER_InvoicingFrequency__c)</formula>
        <label>Invoicing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Nb_of_Employees_for_PDF__c</fullName>
        <formula>&apos;Number of your eligible Employees = &apos;&amp; TEXT(Opportunity.ER_Nb_of_Employees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb of Employees (for PDF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Nb_of_working_days_PDF__c</fullName>
        <formula>&apos;Number of working days per month = &apos;&amp;TEXT( Opportunity.ER_Nb_of_working_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb of working days (PDF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_PaymentMethod__c</fullName>
        <formula>TEXT(Opportunity.ER_PaymentMethod__c)</formula>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_PaymentTerms__c</fullName>
        <formula>TEXT(Opportunity.ER_PaymentTerms__c)</formula>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_ReimbursementTerm__c</fullName>
        <formula>TEXT(Opportunity.ER_ReimbursementTerm__c)</formula>
        <label>Reimbursement Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Salutation_for_PDF__c</fullName>
        <formula>&apos;Dear &apos;&amp; TEXT(Contact.Salutation) &amp;&quot; &quot;&amp; Contact.FirstName &amp;&quot; &quot;&amp;Contact.LastName &amp;&quot;,&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation (for PDF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SK_Credit_Note_Frequency__c</fullName>
        <formula>TEXT(Opportunity.SK_Credit_Note_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SK_Payment_Terms_Voucher__c</fullName>
        <formula>TEXT(Opportunity.SK_Payment_Terms_Voucher__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Voucher</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>ER_Business_Unit__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>ER_Client_Quote</fullName>
        <active>true</active>
        <label>Client Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Merchant_Quote</fullName>
        <active>true</active>
        <label>Merchant Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VRER01_Quote_CheckChangeStatus</fullName>
        <active>true</active>
        <description>Quote status management.
If denied ==&gt; cannot be changed
if accepted ==&gt; cannot change to Presented pr Draft</description>
        <errorConditionFormula>AND(
 NOT($User.ER_BypassVR__c),
 OR(
  AND(
   ISPICKVAL(PRIORVALUE( Status ) , &quot;Accepted&quot;),
   OR(
    ISPICKVAL( Status , &quot;Presented&quot;),
    ISPICKVAL( Status , &quot;Draft&quot;)
   )
  ),
  AND(
   ISPICKVAL(PRIORVALUE( Status ) , &quot;Denied&quot;),
   ISCHANGED(Status)
 )
 )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>This status cannot be used !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_Quote_ClosedWonBlockEdit</fullName>
        <active>true</active>
        <description>When stage is set to “Closed won”, the opportunity record and related quotes cannot be edited.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
TEXT(Opportunity.StageName)=&apos;Closed won&apos;, 
NOT(ISCHANGED( LastModifiedDate )) 
)</errorConditionFormula>
        <errorMessage>When stage is set to “Closed won”, the opportunity record and related quotes cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>